RESOLVED FIXED48327
[Qt] Assert due to multiple initialization of WebPlatformStrategies
https://bugs.webkit.org/show_bug.cgi?id=48327
Summary [Qt] Assert due to multiple initialization of WebPlatformStrategies
alan
Reported 2010-10-26 07:55:27 PDT
https://bugs.webkit.org/show_bug.cgi?id=46078 introduced WebPlatformStrategies::initialize() in QWKPagePrivate::QWKPagePrivate() to initialize the platform strategies in the UI process. Initialization should be done only once, and not per page. Multiple initialization triggers assert in WebCore/PlatformStrategies. The code should mimic the web process side instead. (init is part of the webprocess constuct). I'll upload a patch soon, which removes the initialization, as it is not needed at all atm.
Attachments
remove multiple init (1.25 KB, patch)
2010-10-27 00:02 PDT, alan
no flags
second attempt to fix the original issue (1.73 KB, patch)
2010-10-27 06:17 PDT, Balazs Kelemen
no flags
alan
Comment 1 2010-10-27 00:02:30 PDT
Created attachment 71990 [details] remove multiple init
WebKit Commit Bot
Comment 2 2010-10-27 01:19:23 PDT
Comment on attachment 71990 [details] remove multiple init Clearing flags on attachment: 71990 Committed r70620: <http://trac.webkit.org/changeset/70620>
WebKit Commit Bot
Comment 3 2010-10-27 01:19:29 PDT
All reviewed patches have been landed. Closing bug.
Balazs Kelemen
Comment 4 2010-10-27 06:03:35 PDT
This makes Minibrowser crashing immediately.
Balazs Kelemen
Comment 5 2010-10-27 06:17:46 PDT
Created attachment 72024 [details] second attempt to fix the original issue
Andreas Kling
Comment 6 2010-10-27 06:57:10 PDT
Comment on attachment 72024 [details] second attempt to fix the original issue View in context: https://bugs.webkit.org/attachment.cgi?id=72024&action=review r=me, one comment: > WebKit2/UIProcess/API/qt/qwkpage.cpp:55 > + if (!initialized) { Use early return.
alan
Comment 7 2010-10-27 07:06:44 PDT
oh, sorry. i was about to post the fix on that.
Balazs Kelemen
Comment 8 2010-10-27 07:15:20 PDT
(In reply to comment #6) > (From update of attachment 72024 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=72024&action=review > > r=me, one comment: > > > WebKit2/UIProcess/API/qt/qwkpage.cpp:55 > > + if (!initialized) { > > Use early return. I will. I know that this is the preferred style, but personally I hate that. There are a lot situations where the early return makes the code harder to read.
Balazs Kelemen
Comment 9 2010-10-27 08:24:16 PDT
Note You need to log in before you can comment on or make changes to this bug.