2010-10-27  Zalan Bujtas  <zbujtas@gmail.com>

Reviewed by Kenneth Rohde Christiansen.

        Multiple WebPlatformStrategy initialization triggers assert in WebCore/PlatformStrategies.
        Remove the code for now, as it is not used at all.
        https://bugs.webkit.org/show_bug.cgi?id=48327

        * UIProcess/API/qt/qwkpage.cpp:
        (QWKPagePrivate::QWKPagePrivate):

Canonical link: https://commits.webkit.org/61143@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@70620 268f45cc-cd09-0410-ab3c-d52691b4dbfc