WebKit2/UIProcess/API/qt/qwkpage.cpp
@@ -54,10 +54,6 @@ QWKPagePrivate::QWKPagePrivate(QWKPage* qq, WKPageNamespaceRef namespaceRef)
     , preferences(0)
     , createNewPageFn(0)
 {
-    // We want to use the LocalizationStrategy at the UI side as well.
-    // FIXME: this should be avoided.
-    WebPlatformStrategies::initialize();
-
     memset(actions, 0, sizeof(actions));
     page = toImpl(namespaceRef)->createWebPage();
     page->setPageClient(this);
